feat: moving arc-headers
Signed-off-by: Pawel Psztyc <jarrodek@gmail.com>

--- a/demo/headers/index.html
+++ b/demo/headers/index.html
@@ -10,6 +10,10 @@
     <nav>
       <h2>Contents</h2>
       <dl>
+        <dt><a href="headers-editor.html">Headers editor</a></dt>
+        <dd>A form and text based headers editor</dd>
+        <dt><a href="headers-list.html">Headers list</a></dt>
+        <dd>A list of headers view</dd>
         <dt><a href="arc-definitions.html">ARC definitions</a></dt>
         <dd>ARC's library for querying for HTTP status and headers data.</dd>
       </dl>
