chore: adding arc-url
Signed-off-by: Pawel Psztyc <jarrodek@gmail.com>

--- a/demo/index.html
+++ b/demo/index.html
@@ -16,6 +16,8 @@
         <dd>Libraries related to HTTP authorization.</dd>
         <dt><a href="import-export/index.html">Import/Export</a></dt>
         <dd>Libraries related to ARC data import and export.</dd>
+        <dt><a href="url/index.html">URL</a></dt>
+        <dd>Libraries related to a URL editing.</dd>
       </dl>
     </nav>
   </main>
