feat: adding response view
Signed-off-by: Pawel Psztyc <jarrodek@gmail.com>

--- a/demo/index.html
+++ b/demo/index.html
@@ -18,6 +18,10 @@
         <dd>Libraries related to ARC data import and export.</dd>
         <dt><a href="url/index.html">URL</a></dt>
         <dd>Libraries related to a URL editing.</dd>
+        <dt><a href="har/index.html">HAR format</a></dt>
+        <dd>Libraries related to the HAR format.</dd>
+        <dt><a href="http/index.html">HTTP libraries</a></dt>
+        <dd>Libraries related to the HTTP transport.</dd>
       </dl>
     </nav>
   </main>
