chore: adding body editor
Signed-off-by: Pawel Psztyc <jarrodek@gmail.com>

--- a/demo/index.html
+++ b/demo/index.html
@@ -22,6 +22,8 @@
         <dd>Libraries related to the HAR format.</dd>
         <dt><a href="http/index.html">HTTP libraries</a></dt>
         <dd>Libraries related to the HTTP transport.</dd>
+        <dt><a href="body/index.html">HTTP body</a></dt>
+        <dd>Libraries related to the HTTP body editing.</dd>
       </dl>
     </nav>
   </main>
