--- a/demo/index.html
+++ b/demo/index.html
@@ -24,6 +24,8 @@
         <dd>Libraries related to the HTTP transport.</dd>
         <dt><a href="body/index.html">HTTP body</a></dt>
         <dd>Libraries related to the HTTP body editing.</dd>
+        <dt><a href="variables/index.html">ARC variables and environments</a></dt>
+        <dd>Libraries related to the environments and variables in ARC.</dd>
       </dl>
     </nav>
   </main>
