feat: adding host rules editor
Signed-off-by: Pawel Psztyc <jarrodek@gmail.com>

--- a/demo/index.html
+++ b/demo/index.html
@@ -24,8 +24,10 @@
         <dd>Libraries related to the HTTP transport.</dd>
         <dt><a href="body/index.html">HTTP body</a></dt>
         <dd>Libraries related to the HTTP body editing.</dd>
-        <dt><a href="variables/index.html">ARC variables and environments</a></dt>
+        <dt><a href="variables/index.html">ARC variables</a></dt>
         <dd>Libraries related to the environments and variables in ARC.</dd>
+        <dt><a href="hosts/index.html">ARC hosts</a></dt>
+        <dd>Libraries related to the platform hosts editing.</dd>
       </dl>
     </nav>
   </main>
