chore: adding arc-settings
Signed-off-by: Pawel Psztyc <jarrodek@gmail.com>

--- a/demo/index.html
+++ b/demo/index.html
@@ -28,6 +28,8 @@
         <dd>Libraries related to the environments and variables in ARC.</dd>
         <dt><a href="hosts/index.html">ARC hosts</a></dt>
         <dd>Libraries related to the platform hosts editing.</dd>
+        <dt><a href="settings/index.html">ARC settings</a></dt>
+        <dd>Libraries related to the ARC's settings UI.</dd>
       </dl>
     </nav>
   </main>
