chore: adding requests base UIs
Signed-off-by: Pawel Psztyc <jarrodek@gmail.com>

--- a/demo/index.html
+++ b/demo/index.html
@@ -30,6 +30,8 @@
         <dd>Libraries related to the platform hosts editing.</dd>
         <dt><a href="settings/index.html">ARC settings</a></dt>
         <dd>Libraries related to the ARC's settings UI.</dd>
+        <dt><a href="request/index.html">ARC request</a></dt>
+        <dd>Libraries related to the ARC's HTTP request UI.</dd>
       </dl>
     </nav>
   </main>
