chore: adding ARC menu
Signed-off-by: Pawel Psztyc <jarrodek@gmail.com>

--- a/demo/index.html
+++ b/demo/index.html
@@ -32,6 +32,8 @@
         <dd>Libraries related to the ARC's settings UI.</dd>
         <dt><a href="request/index.html">ARC request</a></dt>
         <dd>Libraries related to the ARC's HTTP request UI.</dd>
+        <dt><a href="menu/index.html">ARC menu</a></dt>
+        <dd>Libraries related to the ARC's navigation.</dd>
       </dl>
     </nav>
   </main>
