chore: adding legacy projects
Signed-off-by: Pawel Psztyc <jarrodek@gmail.com>

--- a/demo/index.html
+++ b/demo/index.html
@@ -34,6 +34,8 @@
         <dd>Libraries related to the ARC's HTTP request UI.</dd>
         <dt><a href="menu/index.html">ARC menu</a></dt>
         <dd>Libraries related to the ARC's navigation.</dd>
+        <dt><a href="legacy-project/index.html">ARC project (legacy)</a></dt>
+        <dd>Libraries related to the ARC's legacy projects.</dd>
       </dl>
     </nav>
   </main>
