chore: adding ARC actions
Signed-off-by: Pawel Psztyc <jarrodek@gmail.com>

--- a/demo/index.html
+++ b/demo/index.html
@@ -36,6 +36,8 @@
         <dd>Libraries related to the ARC's navigation.</dd>
         <dt><a href="legacy-project/index.html">ARC project (legacy)</a></dt>
         <dd>Libraries related to the ARC's legacy projects.</dd>
+        <dt><a href="actions/index.html">ARC request actions</a></dt>
+        <dd>Libraries related to the ARC HTTP request actions.</dd>
       </dl>
     </nav>
   </main>
