chore: adding client certificates
Signed-off-by: Pawel Psztyc <jarrodek@gmail.com>

--- a/demo/index.html
+++ b/demo/index.html
@@ -38,6 +38,8 @@
         <dd>Libraries related to the ARC's legacy projects.</dd>
         <dt><a href="actions/index.html">ARC request actions</a></dt>
         <dd>Libraries related to the ARC HTTP request actions.</dd>
+        <dt><a href="certificates/index.html">Client certificates</a></dt>
+        <dd>Libraries related to the ARC's certificates.</dd>
       </dl>
     </nav>
   </main>
