chore: adding ARC WS
Signed-off-by: Pawel Psztyc <jarrodek@gmail.com>

--- a/demo/index.html
+++ b/demo/index.html
@@ -40,6 +40,8 @@
         <dd>Libraries related to the ARC HTTP request actions.</dd>
         <dt><a href="certificates/index.html">Client certificates</a></dt>
         <dd>Libraries related to the ARC's certificates.</dd>
+        <dt><a href="ws/index.html">Web sockets</a></dt>
+        <dd>Libraries related to the ARC's web sockets.</dd>
       </dl>
     </nav>
   </main>
