chore: adding request UI
Signed-off-by: Pawel Psztyc <jarrodek@gmail.com>

--- a/demo/request/index.html
+++ b/demo/request/index.html
@@ -8,10 +8,20 @@
   <main>
     <h1>ARC request lists module</h1>
     <article>
-      The ARC requests list module contains an UI and logic for to render requests list in various contexts (saved list. history list, project list).
+      The ARC requests module contains an UI and logic for to render HTTP request editor and other HTTP request related UIs
     </article>
     <nav>
       <dl>
+        <dt><a href="request-details.html">Request meta details</a></dt>
+        <dd>A dialog that renders request metadata</dd>
+        <dt><a href="meta-editor.html">Request meta editor</a></dt>
+        <dd>A dialog that renders request metadata editor</dd>
+        <dt><a href="request-editor.html">HTTP request editor</a></dt>
+        <dd>Advanced REST CLient HTTP editor</dd>
+        <dt><a href="request-panel.html">ARC request panel</a></dt>
+        <dd>The request and response screen</dd>
+        <dt><a href="request-workspace.html">ARC request workspace</a></dt>
+        <dd>The ARC requests workspace - the main application screen</dd>
         <dt><a href="history.html">History list demo</a></dt>
         <dd>Example for history list rendering.</dd>
         <dt><a href="history-panel.html">History panel</a></dt>
@@ -27,6 +37,6 @@
       </dl>
     </nav>
   </main>
-  <script type="module" async src="../node_modules/@advanced-rest-client/arc-demo-helper/src/SharedStyles.js"></script>
+  <script type="module" async src="../../node_modules/@advanced-rest-client/arc-demo-helper/src/SharedStyles.js"></script>
 </body>
 </html>
