--- a/demo/index.html
+++ b/demo/index.html
@@ -43,6 +43,11 @@
         <dt><a href="ws/index.html">Web sockets</a></dt>
         <dd>Libraries related to the ARC's web sockets.</dd>
       </dl>
+      <h2>ARC screens</h2>
+      <dl>
+        <dt><a href="pages/about.html">About screen</a></dt>
+        <dd>ARC's about screen.</dd>
+      </dl>
     </nav>
   </main>
   <script type="module" async src="../node_modules/@advanced-rest-client/arc-demo-helper/src/SharedStyles.js"></script>
