chore: moving more pages to this module
Signed-off-by: Pawel Psztyc <jarrodek@gmail.com>

--- a/demo/index.html
+++ b/demo/index.html
@@ -47,6 +47,16 @@
       <dl>
         <dt><a href="pages/about.html">About screen</a></dt>
         <dd>ARC's about screen.</dd>
+        <dt><a href="pages/menu-app.html">Popup menu</a></dt>
+        <dd>ARC's popup menu window.</dd>
+        <dt><a href="pages/search-bar.html">Search bar</a></dt>
+        <dd>The contents of the search bar.</dd>
+        <dt><a href="pages/themes.html">Themes screen</a></dt>
+        <dd>The theme picker screen.</dd>
+        <dt><a href="pages/license.html">License screen</a></dt>
+        <dd>ARC's license screen.</dd>
+        <dt><a href="pages/analytics-consent.html">Telemetry consent</a></dt>
+        <dd>THe analytics consent screen.</dd>
       </dl>
     </nav>
   </main>
