chore: adding platform bindings (basic)
Signed-off-by: Pawel Psztyc <jarrodek@gmail.com>

--- a/demo/index.html
+++ b/demo/index.html
@@ -45,6 +45,8 @@
       </dl>
       <h2>ARC screens</h2>
       <dl>
+        <dt><a href="pages/app.html">ARC main screen</a></dt>
+        <dd>ARC's request workspace screen.</dd>
         <dt><a href="pages/about.html">About screen</a></dt>
         <dd>ARC's about screen.</dd>
         <dt><a href="pages/menu-app.html">Popup menu</a></dt>
