--- a/demo/index.html
+++ b/demo/index.html
@@ -58,7 +58,9 @@
         <dt><a href="pages/license.html">License screen</a></dt>
         <dd>ARC's license screen.</dd>
         <dt><a href="pages/analytics-consent.html">Telemetry consent</a></dt>
-        <dd>THe analytics consent screen.</dd>
+        <dd>The analytics consent screen.</dd>
+        <dt><a href="pages/data-import.html">Data import</a></dt>
+        <dd>The import data / API screen.</dd>
       </dl>
     </nav>
   </main>
