chore: finishing Google Drive bindings
Signed-off-by: Pawel Psztyc <jarrodek@gmail.com>

--- a/demo/index.html
+++ b/demo/index.html
@@ -26,6 +26,8 @@
         <dd>The analytics consent screen.</dd>
         <dt><a href="pages/data-import.html">Data import</a></dt>
         <dd>The import data / API screen.</dd>
+        <dt><a href="pages/drive-picker.html">Google Drive Picker</a></dt>
+        <dd>The Google Drive file picker.</dd>
       </dl>
     </nav>
   </main>
