--- a/demo/pages/api-console.html
+++ b/demo/pages/api-console.html
@@ -5,25 +5,11 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <!-- <meta http-equiv="Content-Security-Policy" content="default-src file: 'self' 'unsafe-inline'; script-src blob: web-module: 'self' 'unsafe-inline' https://apis.google.com; style-src 'self' themes: 'unsafe-inline' https://fonts.googleapis.com; font-src web-module: themes: 'self' https://fonts.gstatic.com; connect-src 'self' https: ws: wss: https://www.google-analytics.com https://app.advancedrestclient.com https://anypoint.mulesoft.com; img-src 'self' blob: data: https://exchange2-asset-manager-kprod.s3.amazonaws.com"> -->
   <title>Advanced REST Client by MuleSoft</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <link href="../../styles/common.css" rel="stylesheet" type="text/css" />
-  <link href="../../styles/app.css" rel="stylesheet" type="text/css" />
+  <link href="../../styles/api-console.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="app.js"></script>
-  <!-- This is used by the EncryptionService -->
-  <anypoint-dialog id="passwordPrompt" style="display: none;">
-    <h2 class="title">Enter password</h2>
-    <anypoint-masked-input>
-      <label slot="label">File password</label>
-    </anypoint-masked-input>
-    <div class="buttons">
-      <anypoint-button data-dialog-dismiss>Cancel</anypoint-button>
-      <anypoint-button data-dialog-confirm>OK</anypoint-button>
-    </div>
-  </anypoint-dialog>
+  <script type="module" src="api-console.js"></script>
 </body>
 </html>
